add card manager , add swagger , fix some error
