# src/res/card/card.controller.ts
@@ -1,18 +1,27 @@
 import { NextFunction, Request, Response } from 'express'
-import { handleCreateCard, handleDeleteCard, handleGetCardById, handleUpdateCard, hanldeGetCards } from './card.service'
+import {
+  handleCreateCard,
+  handleDeleteCard,
+  handleGetCardById,
+  handleGetCardsByUserId,
+  handleUpdateCard,
+  hanldeGetCards
+} from './card.service'
 import { createCardSchema, updateCardSchema } from './card.schema'
 
 export const createCard = async (req: Request, res: Response, next: NextFunction) => {
   try {
+    const { boardId } = req.params
+
     const { success, error } = createCardSchema.safeParse(req.body)
 
     if (!success) {
       return next({ message: error.issues, statusCode: 400 })
     }
 
-    const data = await handleCreateCard(req.body)
+    const data = await handleCreateCard(req.body, boardId)
 
-    return res.status(200).json({
+    return res.status(201).json({
       message: 'Success',
       data,
       statusCode: 201,
@@ -31,7 +40,9 @@ export const createCard = async (req: Request, res: Response, next: NextFunction
 
 export const getCards = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const data = await hanldeGetCards()
+    const { boardId } = req.params
+
+    const data = await hanldeGetCards(boardId)
 
     return res.status(200).json({
       message: 'Success',
@@ -51,8 +62,30 @@ export const getCards = async (req: Request, res: Response, next: NextFunction) 
 
 export const getCardById = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const { id } = req.params
-    const data = await handleGetCardById(id)
+    const { cardId, boardId } = req.params
+    const data = await handleGetCardById(cardId, boardId)
+
+    return res.status(200).json({
+      message: 'Success',
+      data,
+      statusCode: 200,
+      timestamp: new Date().toISOString(),
+      path: req.originalUrl
+    })
+    // eslint-disable-next-line @typescript-eslint/no-explicit-any
+  } catch (error: any) {
+    return next({
+      statusCode: error.statusCode,
+      message: error.message
+    })
+  }
+}
+
+export const getCardsByUserId = async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    const { userId } = req.params
+
+    const data = await handleGetCardsByUserId(userId)
 
     return res.status(200).json({
       message: 'Success',
@@ -72,7 +105,7 @@ export const getCardById = async (req: Request, res: Response, next: NextFunctio
 
 export const updateCard = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const { id } = req.params
+    const { cardId } = req.params
     const payload = req.body
 
     const { success, error } = updateCardSchema.safeParse(payload)
@@ -81,7 +114,7 @@ export const updateCard = async (req: Request, res: Response, next: NextFunction
       return next({ message: error.issues, statusCode: 400 })
     }
 
-    const data = await handleUpdateCard(id, payload)
+    const data = await handleUpdateCard(cardId, payload)
 
     return res.status(200).json({
       message: 'Success',
@@ -101,8 +134,8 @@ export const updateCard = async (req: Request, res: Response, next: NextFunction
 
 export const deleteCard = async (req: Request, res: Response, next: NextFunction) => {
   try {
-    const { id } = req.params
-    const data = await handleDeleteCard(id)
+    const { cardId } = req.params
+    const data = await handleDeleteCard(cardId)
 
     return res.status(204).json({
       message: 'Success',
