# src/res/invite/invite.controller.ts
@@ -1,0 +1,61 @@
+import { NextFunction, Request, Response } from 'express'
+import { sendInviteSchema, respondInviteSchema } from './invite.schema'
+import { handleSendInvite, handleRespondInvite } from './invite.service'
+
+export const sendInvite = async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    const { boardId } = req.params
+
+    const { success, error } = sendInviteSchema.safeParse(req.body)
+
+    if (!success) {
+      return next({ message: error.issues, statusCode: 400 })
+    }
+
+    const data = await handleSendInvite(boardId, req.body)
+
+    return res.status(200).json({
+      message: 'Success',
+      data,
+      statusCode: 200,
+      timestamp: new Date().toISOString(),
+      path: req.originalUrl
+    })
+
+    // eslint-disable-next-line @typescript-eslint/no-explicit-any
+  } catch (error: any) {
+    return next({
+      statusCode: error.statusCode,
+      message: error.message
+    })
+  }
+}
+
+export const respondInvite = async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    const { boardId, cardId } = req.params
+
+    const { success, error } = respondInviteSchema.safeParse(req.body)
+
+    if (!success) {
+      return next({ message: error.issues, statusCode: 400 })
+    }
+
+    const data = await handleRespondInvite(boardId, cardId, req.body)
+
+    return res.status(200).json({
+      message: 'Success',
+      data,
+      statusCode: 200,
+      timestamp: new Date().toISOString(),
+      path: req.originalUrl
+    })
+
+    // eslint-disable-next-line @typescript-eslint/no-explicit-any
+  } catch (error: any) {
+    return next({
+      statusCode: error.statusCode,
+      message: error.message
+    })
+  }
+}
